# qt_yashi_style

./: (backup)dev.qss  .gitignore  CMakeLists.txt  CMakeLists.txt.user.8d327c8  CMakeLists.txt.user.fbd5336  README.md  demo_themes.kdev4  dev.qss  images.qrc  main.cpp  mainwindow.cpp  mainwindow.ui  previewmainwindow.cxx  previewmainwindow.hxx  previewmainwindow.ui
.kdev4/: demo_themes.kdev4
build-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  demo_themes
build-debug/.cmake/api/v1/reply/: cmakeFiles-v1-9cc0af3835899928d784.json  codemodel-v2-561fe0a4f6bca33fcbe7.json  directory-.-Debug-e8e47f5071c6cd598d9b.json  index-2022-11-23T03-16-24-0980.json  target-demo_themes-Debug-3ae8ce4051b986716512.json  target-demo_themes_autogen-Debug-0d81a9395e1b71956f3a.json  target-demo_themes_autogen_timestamp_deps-Debug-002e2ecfff9f565f1245.json
build-debug/demo_themes_autogen/: deps
build-debug/demo_themes_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  qrc_images.cpp
build-debug/demo_themes_autogen/include/: ui_mainwindow.h
